# asterix

./: CMakeLists.txt  LICENSE  README.md
asterix/: CMakeLists.txt  main.cpp
asterixconsole/: CMakeLists.txt
asterixconsole/asterixconsole/: CMakeLists.txt  asterixconsole.cpp  asterixconsole.h
lib/libasterix/src/: libasterix.cpp  libasterix.h
lib/libasterix/src/sys/: atom.h  atom.template  atomic.h  atomic.hpp  basic.h  basic.tmpl  basic_global.h  diagnostic.h  format.h  global  global.h  sexagesimal  sexagesimal.h  sexagesimal_common.c  sexagesimal_common.h  sexagesimal_frmt.cxx  sexagesimal_frmt.hpp
libasterix/: CMakeLists.txt  CMakeSettings.json  func.cmake
libasterix/libasterix/: CMakeLists.txt  libasterix.cpp  libasterix.h
libasterix/libasterix/sys/: basic  global  sexagesimal  sexagesimal.c  sexagesimal.cpp  sexagesimal.h  sexagesimal_common.c  sexagesimal_common.h  sexagesimal_format.h
libs/libasterix/: CMakeLists.txt
libs/libasterix/src/: libasterix.cpp  libasterix.h
libs/libasterix/src/sys/: basic  basic.h  global  sexagesimal  sexagesimal.h  sexagesimal_common.c  sexagesimal_format.h  sexagesimal_frmt.cpp  sexagesimal_frmt.cxx  sexagesimal_frmt.hpp
win32_asterix/: win32_asterix.sln
win32_asterix/asterix.net/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  asterix.net.csproj
win32_asterix/asterix.net/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
win32_asterix/winasterix/: asx_footer.cpp  asx_footer.h  stdafx.cpp  winasterix.cpp  winasterix.vcxproj  winasterix.vcxproj.filters
win32_asterix/winasterix.net/: AssemblyInfo.cpp  winasterix.net.cpp  winasterix.net.h  winasterix.net.vcxproj  winasterix.net.vcxproj.filters
win32_asterix/winasterixlib/: diagnostic.h  main.cpp  winasterixlib.vcxproj  winasterixlib.vcxproj.filters
